--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 .header{
     width: 75%;
     text-align: center;
-    background-color:#586551;
+    background-color:#411b41;
     border-radius: 10px;
     margin: auto;
     padding: 10px;
