--- a/src/Components/Series/Series.css
+++ b/src/Components/Series/Series.css
@@ -1,14 +1,15 @@
-.cast-container{
+.series-container{
     display: grid;
     grid-template-columns: 1fr 3fr;
     margin-top: 30px;
 }
-.cast-container h1{
-    color: rgb(230, 241, 247);
+.series-container h1{
+    color: rgb(58, 72, 80);
     font-size: 20px;
     font-size: medium;
+    padding-top: 5px;
 }
-.details-container{
+.cast-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-left: 80px;
@@ -20,6 +21,6 @@
     height: auto;
     width: 250px;
     padding: 10px;
-    background-color: #586551;
+    background-color: #e1b1ec;
     border-radius: 5px;
 }
