--- a/src/Components/Cast/Cast.css
+++ b/src/Components/Cast/Cast.css
@@ -17,7 +17,7 @@
     padding-top: 10px;
 }
 .purchase-button{
-    background-color: #411b41;
+    background-color: #000000;
     border-radius: 10px;
     padding-top: 5px;
     padding-left: 10px;
