--- a/src/Components/Series/Series.css
+++ b/src/Components/Series/Series.css
@@ -4,10 +4,11 @@
     margin-top: 30px;
 }
 .series-container h1{
-    color: rgb(58, 72, 80);
+    color: rgb(255, 255, 255);
     font-size: 20px;
     font-size: medium;
     padding-top: 5px;
+    font-family: 'Cinzel', serif;
 }
 .cast-container{
     display: grid;
@@ -17,10 +18,10 @@
     margin-left: 28%;
 }
 .cart-container{
-    position:fixed;
+    position: absolute;
     height: auto;
     width: 250px;
     padding: 10px;
-    background-color: #e1b1ec;
+    background-color: rgba(5, 218, 218, 0.808);
     border-radius: 5px;
 }
